--- a/CSS/style.css
+++ b/CSS/style.css
@@ -188,6 +188,22 @@ a.article, a.article:hover {
     margin: 5px auto;
 }
 
+#maps {
+    height: 100%;
+    width: 700%;
+    padding: 0;
+    margin: 0;
+    z-index: 0;
+    position: 0;
+    overflow: 0;
+
+}
+.container {
+    height: 80%;
+    width: 80%;
+}
+
+
 
 /* ---------------------------------------------------
     MEDIAQUERIES
